--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack"
   },
   "author": "Pradeep Kumar",
-  "license": "ISC",
+  "license": "MIT",
   "peerDependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -29,6 +29,10 @@
     "styled-components": "^5.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pkumar98/react-text-content-editable"
   },
   "keywords": [
     "react",
